--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,38 @@
  @import url('https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100..900;1,100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&display=swap');
  
+ /* shared class */
+.text-heading{
+color: rgba(13, 19, 33, 0.70);
+font-family: "Azeret Mono";
+font-size: 21px;
+font-style: normal;
+font-weight: 700;
+line-height: 32px; 
+}
+.text-description{
+   color: #0D1321;
+font-family: "Azeret Mono";
+font-size: 15px;
+font-style: normal;
+font-weight: 400;
+line-height: 26px; 
+}
+
+.btn-primary{
+    padding: 16px 16px;
+ border-radius: 8px;
+ background: #0D1321;
+}
+.btn-primary span{
+   color: #e8eaee;
+text-align: center;
+font-family: "Azeret Mono";
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+}
+
  /* nav section */
  
  nav{
@@ -73,7 +106,7 @@ font-size: 16px;
 font-style: normal;
 font-weight: 400;
 line-height: 26px; /* 162.5% */
-padding-left: 35px;
+padding: 0px 65px;
  }
 
  .hero-content button { 
@@ -102,3 +135,59 @@ line-height: normal;
    background: rgba(13, 19, 33, 0.02);
    margin-left: 150px;
 }
+
+.why-development .container .title{
+   color: #0D1321;
+text-align: center;
+font-family: "Azeret Mono";
+font-size: 28px;
+font-style: normal;
+font-weight: 800;
+line-height: normal;
+padding-top: 70px;
+}
+.why-development .container .description{
+   opacity: 0.7;
+   color: #0D1321;
+text-align: center;
+font-family: "Azeret Mono";
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: 21px;
+padding: 0 110px;
+}
+
+.why-development .content1 .content2 .content3{
+    border-radius: 16px;
+   background: linear-gradient(90deg, #FFF 0%, rgba(255, 255, 255, 0.00) 100%);
+   width: 850px;
+   height: 240px;
+   display: flex;
+   justify-content: space-between;
+}
+
+.why-development .content1{
+   display: flex;
+   justify-content: space-between;
+   margin-top: 50px;
+   padding: 0 48px;
+
+}
+.why-development .content2{
+   display: flex;
+   justify-content: space-between;
+     margin-top: 50px;
+     padding: 0 48px;
+}
+
+.why-development .content3{
+   display: flex;
+   justify-content: space-between;
+     margin-top: 50px;
+     padding: 0 48px;
+}
+
+ .why-development .content1,.content3 img{
+   padding: 0 50px;
+ }
