--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,6 +8,7 @@ font-size: 21px;
 font-style: normal;
 font-weight: 700;
 line-height: 32px; 
+opacity: 0.7;
 }
 .text-description{
    color: #0D1321;
@@ -16,6 +17,26 @@ font-size: 15px;
 font-style: normal;
 font-weight: 400;
 line-height: 26px; 
+opacity: 0.7;
+}
+.heading-primary{
+   color: #0D1321;
+text-align: center;
+font-family: "Azeret Mono";
+font-size: 28px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+}
+.description-primary{
+   color: #0D1321;
+text-align: center;
+font-family: "Azeret Mono";
+font-size: 16px;
+font-style: normal;
+font-weight: 350px;
+line-height: 26px;
+opacity: 0.7;
 }
 
 .btn-primary{
@@ -191,3 +212,25 @@ padding: 0 110px;
  .why-development .content1,.content3 img{
    padding: 0 50px;
  }
+
+ /* inspiration  */
+
+
+ .inspiration .content2{
+    width: 1150px; 
+    height: 550px; 
+    border-radius: 20px; 
+    overflow: hidden; /* Clips the iframe corners */
+    /* Add a border to the wrapper if needed */
+    border: 2px solid #ccc;
+    /* Crucial for some browsers to render correctly */
+    position: relative;
+    transform: translateZ(0); 
+    margin: 40px 150px;
+}
+
+.iframe-container iframe {
+    width: 100%;
+    height: 100%;
+    border: none; /* Remove default iframe border */
+}
