--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,236 +1,362 @@
  @import url('https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100..900;1,100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&display=swap');
- 
- /* shared class */
-.text-heading{
-color: rgba(13, 19, 33, 0.70);
-font-family: "Azeret Mono";
-font-size: 21px;
-font-style: normal;
-font-weight: 700;
-line-height: 32px; 
-opacity: 0.7;
-}
-.text-description{
-   color: #0D1321;
-font-family: "Azeret Mono";
-font-size: 15px;
-font-style: normal;
-font-weight: 400;
-line-height: 26px; 
-opacity: 0.7;
-}
-.heading-primary{
-   color: #0D1321;
-text-align: center;
-font-family: "Azeret Mono";
-font-size: 28px;
-font-style: normal;
-font-weight: 700;
-line-height: normal;
-}
-.description-primary{
-   color: #0D1321;
-text-align: center;
-font-family: "Azeret Mono";
-font-size: 16px;
-font-style: normal;
-font-weight: 350px;
-line-height: 26px;
-opacity: 0.7;
-}
 
-.btn-primary{
+ /* shared class */
+
+
+ .text-heading {
+    color: rgba(13, 19, 33, 0.70);
+    font-family: "Azeret Mono";
+    font-size: 21px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 32px;
+    opacity: 0.7;
+ }
+
+ .text-description {
+    color: #0D1321;
+    font-family: "Azeret Mono";
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 350;
+    line-height: 26px;
+    opacity: 0.7;
+ }
+
+ .heading-primary {
+    color: #090d16;
+    text-align: center;
+    font-family: "Azeret Mono";
+    font-size: 28px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    opacity: 0.7;
+ }
+
+ .description-primary {
+    color: #0D1321;
+    text-align: center;
+    font-family: "Azeret Mono";
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 350px;
+    line-height: 26px;
+    opacity: 0.7;
+ }
+
+ .btn-primary {
     padding: 16px 16px;
- border-radius: 8px;
- background: #0D1321;
-}
-.btn-primary span{
-   color: #e8eaee;
-text-align: center;
-font-family: "Azeret Mono";
-font-size: 16px;
-font-style: normal;
-font-weight: 400;
-line-height: normal;
-}
+    border-radius: 8px;
+    background: #0D1321;
+ }
+
+ .btn-primary span {
+    color: #e8eaee;
+    text-align: center;
+    font-family: "Azeret Mono";
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+ }
 
  /* nav section */
- 
- nav{
-   display: flex;
-   justify-content: space-between;
+
+ nav {
+    display: flex;
+    justify-content: space-between;
  }
 
- nav h1{
+ nav h1 {
     color: #0D1321;
-font-family: "Azeret Mono";
-font-size: 28px;
-font-style: normal;
-font-weight: 800;
-line-height: normal;
-margin-left: 140px;
-margin-top: 35px;
+    font-family: "Azeret Mono";
+    font-size: 28px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+    margin-left: 140px;
+    margin-top: 35px;
  }
 
- nav .btn-nav{
+ nav .btn-nav {
     margin-top: 25px;
     border-radius: 8px;
-   background: #fefefe;
+    background: #fefefe;
     opacity: 0.8;
     padding: 17px 24px;
     margin-right: 140px;
  }
 
- nav .btn-nav span{
+ nav .btn-nav span {
     color: #0D1321;
-text-align: center;
-font-family: "Azeret Mono";
-font-size: 20px;
-font-style: normal;
-font-weight: 600;
-line-height: normal;
+    text-align: center;
+    font-family: "Azeret Mono";
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
  }
 
-  /* hero section */
- .hero{
-    background:  
-    url("../assets/Hero-bg.png");
+ /* hero section */
+ .hero {
+    background:
+       url("../assets/Hero-bg.png");
     background-repeat: no-repeat;
     background-size: cover;
-   /* color: #fff; */
-   width:1550px;
-   height: 652px;
-   margin-top: 36px;
+    /* color: #fff; */
+    width: 1550px;
+    height: 652px;
+    margin-top: 36px;
 
  }
- .hero-content{
+
+ .hero-content {
     text-align: center;
     padding-top: 30px;
     width: 998px;
     margin-left: 200px;
  }
 
- .hero-content h1{
+ .hero-content h1 {
     color: #0D1321;
+    text-align: center;
+    font-family: "Azeret Mono";
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: 68px;
+    /* 141.667% */
+ }
+
+ .hero-content p {
+    color: #0D1321;
+    text-align: center;
+    font-family: "Azeret Mono";
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px;
+    /* 162.5% */
+    padding: 0px 65px;
+ }
+
+ .hero-content button {
+    padding: 21px 24px;
+    border-radius: 8px;
+    background: #0D1321;
+ }
+
+
+ .hero-content button span {
+    color: #FFF;
+    text-align: center;
+    font-family: "Azeret Mono";
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+ }
+
+ /* why development section */
+
+ .why-development {
+    width: 1150px;
+    height: 1340px;
+    border-radius: 16px;
+    background: rgba(13, 19, 33, 0.02);
+    margin-left: 150px;
+ }
+
+ .why-development .container .title {
+    color: #0D1321;
+    text-align: center;
+    font-family: "Azeret Mono";
+    font-size: 28px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+    padding-top: 70px;
+ }
+
+ .why-development .container .description {
+    opacity: 0.7;
+    color: #0D1321;
+    text-align: center;
+    font-family: "Azeret Mono";
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 21px;
+    padding: 0 110px;
+ }
+
+ .why-development .content1 .content2 .content3 {
+    border-radius: 16px;
+    background: linear-gradient(90deg, #FFF 0%, rgba(255, 255, 255, 0.00) 100%);
+    width: 850px;
+    height: 240px;
+    display: flex;
+    justify-content: space-between;
+ }
+
+ .why-development .content1 {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 50px;
+    padding: 0 48px;
+
+ }
+
+ .why-development .content2 {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 50px;
+    padding: 0 48px;
+ }
+
+ .why-development .content3 {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 50px;
+    padding: 0 48px;
+ }
+
+ .why-development .content1,
+ .content3 img {
+    padding: 0 50px;
+ }
+
+ /* inspiration  */
+
+
+ .inspiration .content2 {
+    width: 1150px;
+    height: 550px;
+    border-radius: 20px;
+    overflow: hidden;
+    /* Clips the iframe corners */
+    /* Add a border to the wrapper if needed */
+    border: 2px solid #ccc;
+    /* Crucial for some browsers to render correctly */
+    position: relative;
+    transform: translateZ(0);
+    margin: 40px 150px;
+ }
+
+ .content2 iframe {
+    width: 100%;
+    height: 100%;
+    border: none;
+    /* Remove default iframe border */
+ }
+
+ /* current target section */
+
+ .my-current-target {
+    width: 1150px;
+    margin: 40px 150px;
+ }
+
+ .my-current-target .content2-container {
+    display: flex;
+    justify-content: space-between;
+    gap: 24px;
+    margin-top: 40px;
+
+ }
+
+ .content2-container .content11,
+ .content22,
+ .content33 {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    border-radius: 16px;
+    padding: 36px 36px;
+
+ }
+
+ .content2-container .content11 {
+    background: rgba(255, 76, 30, 0.05);
+ }
+
+ .content2-container .content22 {
+
+    background: rgba(0, 76, 232, 0.05);
+ }
+
+ .content2-container .content33 {
+
+    background: rgba(255, 223, 0, 0.05);
+ }
+
+ /* support section */
+
+ .support{
+   width: 1150px;
+   height: 313px;
+   border-radius: 16px;
+   margin: 40px 150px;
+background: linear-gradient(0deg, rgba(0, 0, 0, 0.20) 0%, rgba(0, 0, 0, 0.20) 100%), linear-gradient(0deg, rgba(0, 0, 0, 0.20) 0%, rgba(0, 0, 0, 0.20) 100%), linear-gradient(0deg, rgba(0, 0, 0, 0.20) 0%, rgba(0, 0, 0, 0.20) 100%), url(../assets/handshake.jpg) lightgray 50% / cover no-repeat;
+ }
+ .support h1{
+   color: #FFF;
 text-align: center;
 font-family: "Azeret Mono";
-font-size: 48px;
+font-size: 30px;
 font-style: normal;
-font-weight: 800;
-line-height: 68px; /* 141.667% */
+font-weight: 700;
+line-height: 36px; /* 112.5% */
+padding-top: 30px;
  }
- .hero-content p{
-    color: #0D1321;
+
+ .support p{
+   color: #FFF;
 text-align: center;
 font-family: "Azeret Mono";
 font-size: 16px;
 font-style: normal;
 font-weight: 400;
 line-height: 26px; /* 162.5% */
-padding: 0px 65px;
+opacity: 0.7;
+padding: 0px 80px;
  }
 
- .hero-content button { 
- padding: 21px 24px;
- border-radius: 8px;
- background: #0D1321;
+ .info{
+   display: flex;
+   justify-content: center;
+   gap: 20px;
+ }
+ .info input{
+   border: 1px solid rgba(13, 19, 33, 0.15);
+   background: #FFF;
+   /* display: block; */
+    gap:24px;
+    margin-bottom: 24px;
+    padding:18px 35px;
+    border-radius: 10px;
+    background:  #FFF;
+    border:0;
+    width: 50%;
+    
  }
 
-
- .hero-content button span{
-    color: #FFF;
-text-align: center;
-font-family: "Azeret Mono";
-font-size: 16px;
-font-style: normal;
-font-weight: 600;
-line-height: normal;
+ .info btn-sp{
+   padding: 17px 20px;
+    border-radius: 8px;
+    background: #d7dade;
+    
  }
 
-/* why development section */
-
-.why-development{
-    width: 1150px;
-    height: 1340px;
-    border-radius: 16px;
-   background: rgba(13, 19, 33, 0.02);
-   margin-left: 150px;
-}
-
-.why-development .container .title{
-   color: #0D1321;
-text-align: center;
-font-family: "Azeret Mono";
-font-size: 28px;
-font-style: normal;
-font-weight: 800;
-line-height: normal;
-padding-top: 70px;
-}
-.why-development .container .description{
-   opacity: 0.7;
-   color: #0D1321;
-text-align: center;
-font-family: "Azeret Mono";
-font-size: 16px;
-font-style: normal;
-font-weight: 400;
-line-height: 21px;
-padding: 0 110px;
-}
-
-.why-development .content1 .content2 .content3{
-    border-radius: 16px;
-   background: linear-gradient(90deg, #FFF 0%, rgba(255, 255, 255, 0.00) 100%);
-   width: 850px;
-   height: 240px;
+ footer{
    display: flex;
    justify-content: space-between;
-}
-
-.why-development .content1{
-   display: flex;
-   justify-content: space-between;
-   margin-top: 50px;
-   padding: 0 48px;
-
-}
-.why-development .content2{
-   display: flex;
-   justify-content: space-between;
-     margin-top: 50px;
-     padding: 0 48px;
-}
-
-.why-development .content3{
-   display: flex;
-   justify-content: space-between;
-     margin-top: 50px;
-     padding: 0 48px;
-}
-
- .why-development .content1,.content3 img{
-   padding: 0 50px;
+   margin: 50px 150px;
+   width: 1150px;
  }
 
- /* inspiration  */
+ footer .img-container img{
+   padding: 0 16px;
+ }
 
-
- .inspiration .content2{
-    width: 1150px; 
-    height: 550px; 
-    border-radius: 20px; 
-    overflow: hidden; /* Clips the iframe corners */
-    /* Add a border to the wrapper if needed */
-    border: 2px solid #ccc;
-    /* Crucial for some browsers to render correctly */
-    position: relative;
-    transform: translateZ(0); 
-    margin: 40px 150px;
-}
-
-.iframe-container iframe {
-    width: 100%;
-    height: 100%;
-    border: none; /* Remove default iframe border */
-}
+ /* finished Alhamdulillah */
